# sample-api

./: .gitignore  AGENTS.md  INTERVIEW_COVERAGE_ANALYSIS.md  INTERVIEW_READINESS.md  QUICK_PATTERNS_REFERENCE.md  README.md  README.md.backup  cli.py  docker-compose.dev.yml  docker-compose.yml
.cursor/commands/: commit-message.md  pr-summary.md  setup-repo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  .flake8  AGENTS.md  Dockerfile  app.py  pyproject.toml
backend/data/: README.md  departments.csv  employees.csv  sample_data.csv  sample_data.json
backend/src/: data_parsing.py
backend/tests/unit/: test_data_parsing.py
docs/: README.md  generic-agent-instructions.md
docs/template/: api-patterns.md  business-logic.md  cli-patterns.md  customization.md  index.md  overview.md  pyproject.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AGENTS.md  FactorialCalculator.jsx  FibonacciGenerator.jsx  PowerCalculator.jsx  PrimeChecker.jsx  SquareCalculator.jsx  StatisticsCalculator.jsx
frontend/src/services/: api.js
scripts/: README.md  validate_template.py  verify_setup.sh
src/: __init__.py  math_operations.py
tests/integration/: test_api_integration.py  test_cli_integration.py
tests/unit/: test_math_operations.py
